Use MVC pattern to handle MCP Resource