@@ -23,10 +23,12 @@ import org.apache.shardingsphere.mcp.uri.MCPUriPattern;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Map.Entry;
 
 /**
  * Resource handler registry.
@@ -34,44 +36,45 @@ import java.util.stream.Collectors;
 @Getter
 public final class ResourceHandlerRegistry {
     
-    private final List<ResourceHandlerRegistration> handlerRegistrations;
+    private final Map<MCPUriPattern, ResourceHandler> registeredHandlers;
     
     private final List<String> supportedResources;
     
     public ResourceHandlerRegistry(final Collection<ResourceHandler> handlers) {
-        List<ResourceHandlerRegistration> registeredHandlers = createHandlerRegistrations(handlers);
-        validateHandlerRegistrations(registeredHandlers);
-        handlerRegistrations = registeredHandlers;
-        supportedResources = registeredHandlers.stream().map(each -> each.getUriPattern().getPattern()).collect(Collectors.toList());
+        Map<MCPUriPattern, ResourceHandler> result = createRegisteredHandlers(handlers);
+        validateRegisteredHandlers(result);
+        registeredHandlers = Collections.unmodifiableMap(result);
+        supportedResources = result.keySet().stream().map(MCPUriPattern::getPattern).toList();
     }
     
-    private List<ResourceHandlerRegistration> createHandlerRegistrations(final Collection<ResourceHandler> handlers) {
+    private Map<MCPUriPattern, ResourceHandler> createRegisteredHandlers(final Collection<ResourceHandler> handlers) {
         ShardingSpherePreconditions.checkNotEmpty(handlers, () -> new IllegalStateException("No resource handlers are registered."));
-        List<ResourceHandlerRegistration> result = new ArrayList<>(handlers.size());
+        Map<MCPUriPattern, ResourceHandler> result = new LinkedHashMap<>(handlers.size(), 1F);
         for (ResourceHandler each : handlers) {
             ShardingSpherePreconditions.checkState(null != each.getUriPattern() && !each.getUriPattern().isEmpty(),
                     () -> new IllegalArgumentException(String.format("Resource URI pattern is required for `%s`.", each.getClass().getName())));
-            result.add(new ResourceHandlerRegistration(each, new MCPUriPattern(each.getUriPattern())));
+            result.put(new MCPUriPattern(each.getUriPattern()), each);
         }
         return result;
     }
     
-    private void validateHandlerRegistrations(final List<ResourceHandlerRegistration> handlerRegistrations) {
-        Map<String, Class<?>> registeredPatterns = new HashMap<>(handlerRegistrations.size(), 1F);
-        for (ResourceHandlerRegistration each : handlerRegistrations) {
-            String pattern = each.getUriPattern().getPattern();
-            Class<?> previousPatternClass = registeredPatterns.putIfAbsent(pattern, each.getHandler().getClass());
+    private void validateRegisteredHandlers(final Map<MCPUriPattern, ResourceHandler> registeredHandlers) {
+        Map<String, Class<?>> registeredPatterns = new HashMap<>(registeredHandlers.size(), 1F);
+        for (Entry<MCPUriPattern, ResourceHandler> entry : registeredHandlers.entrySet()) {
+            String pattern = entry.getKey().getPattern();
+            Class<?> previousPatternClass = registeredPatterns.putIfAbsent(pattern, entry.getValue().getClass());
             ShardingSpherePreconditions.checkState(null == previousPatternClass,
                     () -> new IllegalArgumentException(String.format("Duplicate resource URI pattern `%s` with `%s` and `%s`.",
-                            pattern, previousPatternClass.getName(), each.getHandler().getClass().getName())));
+                            pattern, previousPatternClass.getName(), entry.getValue().getClass().getName())));
         }
-        for (int i = 0; i < handlerRegistrations.size(); i++) {
-            ResourceHandlerRegistration current = handlerRegistrations.get(i);
-            for (int j = i + 1; j < handlerRegistrations.size(); j++) {
-                ResourceHandlerRegistration other = handlerRegistrations.get(j);
-                ShardingSpherePreconditions.checkState(!current.getUriPattern().isOverlaps(other.getUriPattern()), () -> new IllegalArgumentException(
+        List<Entry<MCPUriPattern, ResourceHandler>> entries = new ArrayList<>(registeredHandlers.entrySet());
+        for (int i = 0; i < entries.size(); i++) {
+            Entry<MCPUriPattern, ResourceHandler> current = entries.get(i);
+            for (int j = i + 1; j < entries.size(); j++) {
+                Entry<MCPUriPattern, ResourceHandler> other = entries.get(j);
+                ShardingSpherePreconditions.checkState(!current.getKey().isOverlaps(other.getKey()), () -> new IllegalArgumentException(
                         String.format("Overlapping resource URI patterns `%s` with `%s` and `%s`.",
-                                current.getUriPattern().getPattern(), current.getHandler().getClass().getName(), other.getHandler().getClass().getName())));
+                                current.getKey().getPattern(), current.getValue().getClass().getName(), other.getValue().getClass().getName())));
             }
         }
     }
